# Muduo-protobuf-rpc

./: CMakeLists.txt  README.md
example/: user.proto
example/callee/: CMakeLists.txt  userservice.cc
example/caller/: CMakeLists.txt  calluserservice.cc
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h  socketdeleter.h
test/protobuf/: main.cc  test.pb.cc  test.pb.h  test.proto
